# WebServer

./: .gitmodules  CMakeLists.txt
include/: Parser.hpp  Parser.hpp-old  Server.hpp
src/Server/: server.cpp
src/Shared/: Parser.cpp  Parser.cpp-old  Server.cpp
tests/: main.cpp
